--- a/templates/components/products/product-view.html
+++ b/templates/components/products/product-view.html
@@ -85,11 +85,11 @@
                             {{> components/common/alert-error (lang 'products.sold_out')}}
                         {{/if}}
                     {{/if}}
+                    <p class="guantee-text text-left">100% Guaranteed Fit. Free US Shipping + Returns.</p>
                 </form>
-                <p class="text-left">100% Guaranteed Fit. Free US Shipping + Returns.</p>
-                <div class="pdp-fit-links text-left">
+                <p class="pdp-fit-links text-left">
                     <a data-reveal-id="sizeguideModal">Can't Find Your Size?</a>
-                </div>
+                </p>
             </div>
 
             <article class="productView-description"{{#if schema}} itemprop="description"{{/if}}>
