--- a/templates/components/products/product-view.html
+++ b/templates/components/products/product-view.html
@@ -26,17 +26,17 @@
             </div>
         </section>
 
-        <section class="productView-mobile-images col-12" >
+        <section class="pdp-mobile-images col-12" >
             <div class="image-viewer">
                 <img src="{{cdn 'img/expand-icon.png'}}" class="fa-expand pdp-mobile-zoomCtrl" aria-hidden="true" />
                 <div id="pdp-mobile-flexslider" class="pdp-mobile-flexslider">
                 {{#each product.images}}
-                    <div class="feature-row" data-thumb="{{getImage this 'zoom_size'}}">
+                    <div class="feature-row" data-thumb="{{getImage this 'default_size'}}">
                         <img
                             class="lazyload feature-row__image"
                             data-sizes="auto"
                             src="{{cdn 'img/logo-d-spacer.png'}}" 
-                            data-src="{{getImage this 'zoom_size'}}"
+                            data-src="{{getImage this 'gallery_size'}}"
                             tabindex="-1"
                             alt="{{name}}" title="{{name}}"
                         >
@@ -47,8 +47,10 @@
             <div class="mobile-zoom-container hidden">
                 <img src="{{cdn 'img/compress-icon.png'}}" class="fa fa-compress pdp-mobile-zoomCtrl" aria-hidden="true" />
                 <img
-                class="mobile-zoomviewer-image"
-                tabindex="-1"
+                    class="mobile-zoomviewer-image"
+                    tabindex="-1"
+                    data-sizes="auto"
+                    src="{{cdn 'img/logo-d-spacer.png'}}" 
                 />
             </div>
         </section>
