--- a/assets/scss/custom/components/product/_components.scss
+++ b/assets/scss/custom/components/product/_components.scss
@@ -263,3 +263,89 @@
     font-size: 13px;
   }
 }
+
+.recent-products {
+  width: 100%;
+  text-align: center;
+  margin: auto;
+
+  .section-header {
+    font-size: 14px;
+    line-height: 1.2;
+    letter-spacing: .5px;
+    font-weight: 600;
+    margin: 0;
+    padding: 20px 0 25px;
+    text-align: center;
+    text-transform: uppercase;
+  }
+
+  &.hidden {
+      display: none;
+  }
+  
+  .slick-arrow {
+      display: none !important;
+  }
+
+  .slick-track {
+      margin: 0;
+  }
+
+  .feature-row {
+    padding: 0 stencilNumber("padding-small");
+    display: inline-block;
+    position: relative;
+
+    .slick-figoverlay {
+      z-index: 3;
+      bottom: 0;
+      position: absolute;
+      width: calc(100% - 20px);
+      height: 100%;
+      background: rgba(255,255,255,.9);
+      text-align: center;
+      transition: .2s;
+      opacity: 0;
+      padding: stencilNumber("padding-small") * 2;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: fontSize("small") * 0.9;
+      text-transform: uppercase;
+      font-weight: bold;
+      color: stencilColor("navUser-color");
+    }
+    &:hover .slick-figoverlay {
+        opacity: 1;
+    }
+  }
+
+  @include breakpoint("medium") {
+      .slick-arrow {
+        display: inline-block !important;
+        margin: remCalc(-80px) 0 0 0;
+        top: 50%;
+        transform: translate(0, -50%);
+        margin: 0;
+        width: 50px;
+        height: 64px;
+
+        &:before {
+          font-size: 14px;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          height: 100%;
+          width: 100%;
+          background-size: 10px 10px;
+          font-family: flexslider-icon;
+          content: '\f001';
+          color: #0a0a0a;
+        }
+        &.slick-next:before {
+          content: "\f002";
+        }
+      }
+  }
+}
