--- a/templates/components/products/product-view.html
+++ b/templates/components/products/product-view.html
@@ -92,7 +92,7 @@
                 </p>
             </div>
 
-            <article class="productView-description"{{#if schema}} itemprop="description"{{/if}}>
+            <article class="pdp-description-tabs"{{#if schema}} itemprop="description"{{/if}}>
                 {{> components/products/description-tabs}}
             </article>
         </section>
